--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 asgiref==3.2.7
-botocore==1.16.23
+dj-database-url==0.5.0
 Django==3.0.7
 django-filter==2.2.0
+django-heroku==0.3.1
 docutils==0.15.2
 gunicorn==20.0.4
 jmespath==0.10.0
 Pillow==7.1.2
+psycopg2==2.8.5
 python-dateutil==2.8.1
 pytz==2020.1
 s3transfer==0.3.3
